--- a/code/index.html
+++ b/code/index.html
@@ -1,88 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css"   href="style.css">
-  <title>Game Zone Home</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <title>GAME ZONE NEWS</title>
+  </head>
 
+  <body>
 
-</head>
-<body>
-<header>
+    <header>  <!--HEADER SECTION-->
 
-  <Div class="hamburger">
-    <div></div>
-    <div></div>
-    <div></div>
-  </Div>
+      <nav>
+        <img class="logo" src="./img/gamelogo.png" alt="GAME ZONE ICON">
+        <div class="left">
+          <a class="leftlinks" href="#">HOME</a>
+          <a class="leftlinks" href="#">GUIDE</a>
+        </div>
+        <div class="right">
+          <a class="rightlinks" href="#">UPCOMMING</a>
+          <a class="rightlinks" href="#">UPDATES</a>
+        </div>
+      </nav>
+    </header>
 
-  <img class="logo-image" src="./img/Gamelogo.png" alt="Game Zone Icon">
-  
-  <div class="nav">
-    
-    <li><a href="#" class="navlink">HOME</a></li>
-    <li><a href="#" class="navlink">GUIDES</a></li>
-    <li><a href="#" class="navlink">UPCOMING</a></li>
-    <li><a href="#" class="navlink">UPDATES</a></li>
-  
+    <main class="bigger-news-container"> <!-- HEADLINE NEWS SECTION-->
+      <section class="big-news-container">
+        <img src="./img/psxbox.png" alt="PS5 XBOX Image">
 
-  </div>
-</header>
+        <div class="big-news-text">
+          <article>
+            <h2>Playstation 5 v/s Xbox Series X !</h2>
+            <p>The next generation of consoles is coming, and Sony and Microsoft are getting ready to battle it out for system supremacy, pitting the PlayStation 5 against the Xbox Series X this holiday season.</p>
+          </article>
+          <a class="readmore" ref="https://www.tomsguide.com/face-off/ps5-vs-xbox-series-x">Read More...</a>
+        </div>
+      </section>
+    </main>
 
-<section class="welcome-container">
-    <img src="./img/psxbox.png" alt="NEW PS & XBOX Image">
-    <div>
-      <H2>Playstation 5 v/s Xbox Series X !</H2>
-      <p>The next generation of consoles is coming, and Sony and Microsoft are getting ready to battle it out for system supremacy, pitting the PlayStation 5 against the Xbox Series X this holiday season. </p>
-    </div>
-</section>
+    <hr/>
 
-<main class="wrapper">
+    <h3 class="latestnews.">GAMES YOU SHOULD PLAY ...</h3>
 
-    <div class="card">
-      <a href="#"><img src="./img/rdr2.jpg" alt="Red Dead Redemption II"></a>
-      <h2>Red Dead Redemption 2</h2>
-    </div>
+    <section class="newscards">  <!-- NEWS CARDS-->
+     
+      <div class="cards">
+        <img src="./img/rdr2.jpg" alt="Red Dead Redemption II">
+        <h3>RED DEAD REDEMPTION II</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/Diablo.jpg" alt="Diablo"></a>
-      <h2>Diablo</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/Diablo.jpg" alt="Diablo">
+        <h3>Diablo III</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/gta5.jpg" alt="Grand Theft Auto 5"></a>
-      <h2>Grand Theft Auto 5</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/Witcher.jpeg" alt="Witcher">
+        <h3>Witcher III</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/nfs.jpg" alt="Need For Speed"></a>
-      <h2>Need For Speed</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/gta5.jpg" alt="Grand Theft Auto 5">
+        <h3>Grand Theft Auto V</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/Tombraider.jpg" alt="Tombraider"></a>
-      <h2>Tombraider</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/nfs.jpg" alt="Need For Speed">
+        <h3>Need for Speed - Uncut</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/Watchdogs.jpg" alt="Watch Dogs"></a>
-      <h2>Watch Dogs</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/Tombraider.jpg" alt="Tombraider">
+        <h3>Rise of Tombraider</h3>
+      </div>
 
-    <div class="card">
-      <a href="#"><img src="./img/Witcher.jpeg" alt="Witcher"></a>
-      <h2>Witcher</h2> 
-    </div>
+      <div class="cards">
+        <img src="./img/Watchdogs.jpg" alt="Watch Dogs">
+        <h3>Watchdogs 2</h3>
+      </div>
 
-  </main>
+    </section>
 
-  <footer>
+    <Footer>
+      <p class="Footer">🦊 Game Zone News by Karan Mann 🦊</p>
+    </Footer>
 
-    <p>Footer</p>
-
-  </footer>
-
-</body>
+  </body>
 </html>
