Added more cards and more information in the footer

--- a/code/index.html
+++ b/code/index.html
@@ -60,10 +60,31 @@
         </div>
       </div>
       <div class="card">
-        <img src="spa.jpg" alt="spa" style="width:100%">
+        <img src="yasuragispa.jpg" alt="spa" style="width:100%">
         <div class="container">
           <h4><b>HACK DOPAMINE</b></h4>
           <p>Taking care of yourself makes the dopamine chemical show, why don´t enjoy yourself at a spa?</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="sunexposing.jpg" alt="sun-exposure" style="width:100%">
+        <div class="container">
+          <h4><b>HACK SEROTONIN</b></h4>
+          <p>Have you ever wonder why people just love sitting in the sun?</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="alcestconcert.jpg" alt="musicconsert" style="width:100%">
+        <div class="container">
+          <h4><b>HACK ????</b></h4>
+          <p>Love going on a concert with your favorite band? What is it that makes you feel so good?</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="completing-a-task.jpg" alt="completing-a-task" style="width:100%">
+        <div class="container">
+          <h4><b>HACK DOPAMINE</b></h4>
+          <p>Completed a task, for example a Technigo project new site? Hello Dopamine!</p>
         </div>
       </div>
     </section>
@@ -71,6 +92,8 @@
      <!-- Footer -->
     <footer>
       <p>By Elisa (my first individual project as a student at Technigo Front End Boot Camp).</p>
+      <p>Logotype with animation done by me at <a href="https://www.canva.com/" alt="https://www.canva.com/">canva.com</a></p>
+      <p>Photos: private.</p>
     </footer>
   </body>
 </html>
