Finished some responsivness changes

--- a/code/index.html
+++ b/code/index.html
@@ -26,7 +26,7 @@
       <img src="cloudberry.jpg" alt="cloudberry">
       <div class="big-news-text">
        <h3>HACK SEROTONIN: EXPLORE THE CLOUDBERRY SEASON</h3>
-       <p>Now is the time to go hunt cloudberries, and while walking in nature also gain some serotonin.</p>
+       <p>Now is the time to go hunt cloudberries, and while walking in nature also gain some serotonin. This year in Sweden we have a so called "cloudberry year" and you can find cloudberries almost everywhere in Sweden.</p>
       </div>
     </section>
 
