Desktop, updated layout, images, animation added. New images, new layout on header, articles and footer, position and opacity animations
git commit
git push
git commit --amend
git status

--- a/code/index.html
+++ b/code/index.html
@@ -10,63 +10,132 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
-      <img class="logo" src="./images/logo.svg"> 
-      <nav>
-        <a href="#">Sience</a>
-        <a href="#">Activism</a>
-        <a href="#">Positive trends</a>
-        <a href="#">Politics</a>
-      </nav>
+      <section class="header-content">
+        <img class="logo" src="./images/climate-news-logo.svg"> 
+        <nav>
+          <div>
+            <a href="#">Science</a>
+            <a href="#">Activism</a>
+          </div>
+          <div>
+            <a href="#">Politics</a>
+            <a href="#">Energy</a>
+          </div>
+        </nav>
+      </section>
     </header>
-
+<main>
     <section class="big-news">
       <article class="bigArticle">
        <img src="./images/photo-wind_park.jfif">
-       <section class="articleText">
+       <div class="articleText">
        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </h1>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptas quod beatae accusantium. Quam officiis et provident laborum temporibus dignissimos harum vero aperiam praesentium, consectetur facilis dolor ea laboriosam expedita.</p>
-       <p class="dates">Written by xxxx xxxx 2020-08-20</p><!-- The big news content --></section>
+       <p class="dates">Written by xxxx xxxx 2020-08-20</p> 
+      </div>
+      
     </article>
     </section>
 
     <section class="small-news">
-      <!-- The other news  -->
+
       <article class="smallArticle">
-        <img src="./images/photo-wind_park.jfif">
-        <section class="articleText">
+        <h3>Politics</h3>
+        <img src="images/noaa-24zTdnS3zc4-unsplash.jpg">
+        <div class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
-        </section>
+        </div>
       </article>
       <article class="smallArticle">
-        <img src="./images/photo-wind_park.jfif">
-        <section class="articleText">
+        <h3>Politics</h3>
+        <img src="./images/prudence-earl-8F0I12ypHPA-unsplash.jpg">
+        <div class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
-        </section>
+        </div>
       </article>
       <article class="smallArticle">
-        <img src="./images/photo-wind_park.jfif">
-        <section class="articleText">
+        <h3>Politics</h3>
+        <img src="./images/john-cameron-FMrZLPdDyx4-unsplash.jpg">
+        <div class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
-        </section>
+        </div>
       </article>
       <article class="smallArticle">
-        <img src="./images/photo-wind_park.jfif">
-        <section class="articleText">
+        <h3>Politics</h3>
+        <img src="./images/scott-warman-NpNvI4ilT4A-unsplash.jpg">
+        <div class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
           <p class="dates">2020-08-20</p>
-        </section>
+        </div>
       </article>
+
     </section>
 
+    <section class="small-news-second">
+   
+      <article class="smallArticle">
+        <h3>Politics</h3>
+        <img src="./images/noaa-5hZJVGPG6vo-unsplash.jpg">
+        <div class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </div>
+      </article>
+      <article class="smallArticle">
+        <h3>Politics</h3>
+        <img src="./images/noaa-JYwYaqrU6Us-unsplash.jpg">
+        <div class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </div>
+      </article>
+      <article class="smallArticle">
+        <h3>Politics</h3>
+        <img src="./images/ethan-mcarthur-8KLLgqHMAv4-unsplash.jpg">
+        <div class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </div>
+      </article>
+      <article class="smallArticle">
+        <h3>Politics</h3>
+        <img src="./images/jason-dent-5VnI90YqrTE-unsplash.jpg">
+        <div class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </div>
+      </article>
+    </section>
+  </main>
     <footer>
+      <section class="footer-content">
+        <div class="links">
+          <a href="#">Contact</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+        </div>
+        <div class="links">
+          <a href="#">Send tip</a>
+          <a href="#">Press</a>
+          <a href="#">Press</a>
+        </div>
+        <div class="links">
+          <p></p>
+          <p>­Last updated: 2020-08-27</p>
+          <p>­Built for Technigo Bootcamp</p>
+        </div>
+      </section>
 
 
     </footer>
