aligned text in desktopview

--- a/code/index.html
+++ b/code/index.html
@@ -15,8 +15,9 @@
   <header>
     <img src="LogoFooderWithText.png" alt="Fooder Logo">
     <img class="logo" src="LogoFooder.png" alt="Fooder Logo">
-    <div class="container"><h1>Fooder Magazine</h1>
-    <h2>Get the latest bites of news from the foodie community</h2>
+    <div class="container">
+      <h1>Fooder Magazine</h1>
+      <h2>Get the latest bites of news from the foodie community</h2>
     </div>
   </header>
 
@@ -37,57 +38,85 @@
   <main>
     <article class="big-news">
       <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
-      <div class="big-news-text"><h2>Jennies fusion-corner big success</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
-        taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
-        faucibus at tincidunt mollis, ad libero vivamus ante pretium laoreet montes odio vestibulum, mi cubilia augue
-        placerat eros fringilla velit vel. Est et maecenas habitant lobortis aliquet senectus porttitor volutpat
-        convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
-        hendrerit metus elementum.</p>
+      <div class="big-news-text">
+        <h2>Jennies fusion-corner big success</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
+          taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
+          faucibus at tincidunt mollis, ad libero vivamus ante pretium laoreet montes odio vestibulum, mi cubilia augue
+          placerat eros fringilla velit vel. Est et maecenas habitant lobortis aliquet senectus porttitor volutpat
+          convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
+          hendrerit metus elementum.</p>
       </div>
     </article>
 
 
-  <section class="card-container">
-    <div class="article-card one"><img src="pictures/salmon.jpg" alt="">
-      <h3>Olszewski opens up new restaurant</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card two"><img src="pictures/cookingpasta.jpg" alt="">
-      <h3>Crashcourse in pasta</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card three"><img src="pictures/femalechef.jpg" alt="">
-      <h3>Who run the chef-world? Girls!</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card four"><img src="pictures/restaurantoverview.jpg" alt="">
-      <h3>Covid-19 vs restaurants</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card five"><img src="pictures/casserol.jpg" alt="">
-      <h3>Going back to oldschool methods</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card six"><img src="pictures/cookingInProgress.jpg" alt="">
-      <h3>Stockholms best Ramen</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card seven"><img src="pictures/pizza.jpg" alt="">
-      <h3>Papa Poyas Pizza</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-    <div class="article-card eight"><img src="pictures/tacos.jpg" alt="">
-      <h3>Fooders guide to Mexico</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
-        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
-    </div>
-  </section>
-</main>
+    <section class="card-container">
+      <div class="article-card one"><img src="pictures/salmon.jpg" alt="">
+        <div class="card-text">
+          <h3>Olszewski opens up new restaurant</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card two"><img src="pictures/cookingpasta.jpg" alt="">
+        <div class="card-text">
+          <h3>Crashcourse in pasta</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card three"><img src="pictures/femalechef.jpg" alt="">
+        <div class="card-text">
+          <h3>Who run the chef-world? Girls!</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card four"><img src="pictures/restaurantoverview.jpg" alt="">
+        <div class="card-text">
+          <h3>Covid-19 vs restaurants</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card five"><img src="pictures/casserol.jpg" alt="">
+        <div class="card-text">
+          <h3>Going back to oldschool methods</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card six"><img src="pictures/cookingInProgress.jpg" alt="">
+        <div class="card-text">
+          <h3>Stockholms best Ramen</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card seven"><img src="pictures/pizza.jpg" alt="">
+        <div class="card-text">
+          <h3>Papa Poyas Pizza</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+      <div class="article-card eight"><img src="pictures/tacos.jpg" alt="">
+        <div class="card-text">
+          <h3>Fooders guide to Mexico</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
+            montes
+            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 
