--- a/code/index.html
+++ b/code/index.html
@@ -22,6 +22,11 @@
             <a href="#">Energy</a>
           </div>
         </nav>
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </section>
     </header>
 <main>
@@ -120,17 +125,17 @@
   </main>
     <footer>
       <section class="footer-content">
-        <div class="links">
+        <div class="links-prio-1">
           <a href="#">Contact</a>
           <a href="#">About</a>
           <a href="#">About</a>
         </div>
-        <div class="links">
+        <div class="links-prio-2">
           <a href="#">Send tip</a>
           <a href="#">Press</a>
           <a href="#">Press</a>
         </div>
-        <div class="links">
+        <div class="links-prio-1">
           <p></p>
           <p>­Last updated: 2020-08-27</p>
           <p>­Built for Technigo Bootcamp</p>
