--- a/code/index.html
+++ b/code/index.html
@@ -31,19 +31,22 @@
 
     <!-- BIG NEWS SECTION -->
     <section class="big-news">
-      <h1>NEWS NEWS NEWS!!!!</h1>
-      <div>
+      <h1>WHAT'S NEW IN THE CUPCAKE UNIVERSE?</h1>
+      <div class="big-text-div">
         <img src="./Images/pic2_unsplash.jpg" alt="water image">
-        <p>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna 
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-          ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-          Duis aute irure dolor in reprehenderit in voluptate velit 
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-          sint occaecat cupidatat non proident, sunt in culpa qui 
-          officia deserunt mollit anim id est laborum."
-        </p>
+        <div>
+          <h2>News news news</h2>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna 
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+            sint occaecat cupidatat non proident, sunt in culpa qui 
+            officia deserunt mollit anim id est laborum."
+          </p>
+        </div>
       </div>
     </section>
 
@@ -51,35 +54,51 @@
     <section class="small-news-container">
       <div class="grid-1 grid">
         <img src="./Images/pic1_unsplash.jpg" alt="">
-        <p>Sprinkles will take your cupcakes to the next level.</p>
+        <p>
+          Sprinkles will take your cupcakes to the next level.<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-2 grid">
         <img src="./Images/pic3_unsplash.jpg" alt="">
-        <p>The perfect cupcakes for your birthday? Here's what you need to know!</p>
+        <p>
+          The perfect cupcakes for your birthday? Here's what you need to know!<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-3">
         <img src="./Images/pic4_unsplash.jpg" alt="">
-        <p>Find out how to make the tastiest frosting.</p>
+        <p>
+          Find out how to make the tastiest frosting.<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-4">
         <img src="./Images/pic5_unsplash.jpg" alt="">
-        <p>News 4</p>
+      <p>
+        New movie out now, 'The cupcakes takes manhattan'!<br><a>Read More</a>
+      </p>
       </div>
       <div class="grid-5">
         <img src="./Images/pic6_unsplash.jpg" alt="">
-        <p>How to get the perfect swirls on your cupcakes!<a>Read More</a></p>
+        <p>
+          How to get the perfect swirls on your cupcakes!<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-6">
         <img src="./Images/pic7_unsplash.jpg" alt="">
-        <p>There is a cupcake for every occasion!<a>Read More</a></p>
+        <p>
+          There is a cupcake for every occasion!<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-7">
         <img src="./Images/pic8_unsplash.jpg" alt="">
-        <p>hOW TO PERFECT</p>
+        <p>
+          Manuela shares her passion for baking, what is her best advice?<br><a>Read More</a>
+        </p>
       </div>
       <div class="grid-8">
         <img src="./Images/pic9_unsplash.jpg" alt="">
-        <p>News 8</p>
+        <p>
+          News 8<br><a>Read More</a>
+        </p>
       </div>
     </section>
 
