--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climate News</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="./favicon.ico" />
   
     <!-- dont forget the meta tag for responsiveness -->
   </head>
