Improved  hover effect

--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
     <h1>Dogs looking for home</h1>
     <p>Do you live an adventurous, sporty and active life that the dog should participate in? Do you enjoy strolling in green areas and having a faithful friend next to you on the sofa when the evening comes? Take a closer look at the dogs that are relevant for adoption and contact us.</p>
     <section class="cards">
-      <a href="#">
+      <a href="#Archie" id="Archie">
         <figure>
           <img src="./images/Dog2.jpg" alt="Archie">
           <figcaption>Archie</figcaption>
@@ -55,7 +55,7 @@
           We remember this guy who was found dumped out on a field near the fence. Acke just sat there, he had given up and he no longer knew how to cope with finding food or surviving at all. Rudi saw him and stopped the car but Acke didn't move, he didn't even try to escape . We see that Acke feels confused and does not know what is happening and that is why we are now looking for Ackes home so that he can get a lot of love and finally feel loved for the nice dog he turned out to be . If you are interested in giving Acke a nice and safe home, please contact us with an interest report.
         </p>
       </a>
-      <a href="#">
+      <a href="#Charm" id="Charm">
         <figure>
           <img src="./images/Dog3.jpg" alt="Charm">
           <figcaption>Charm</figcaption>
@@ -65,7 +65,7 @@
           This guy was just days away from losing his life when we were asked if we could take one or two dogs from the dreaded municipal fence in Vaslui over 30 miles from our shelter located outside Bucharest. Pictures and videos came and 2 dogs turned seven despite the huge lack of space in our fence. In the fence, it was quiet despite hundreds of dogs and it was a really eerie mood as no one dared to take it when the rescue entered the kennels. Charm was one of those dogs that immediately drew our attention when he sat shaking in a corner and looking into the wall, he did not dare to be seen when customers attacks that ended with death.
         </p>
       </a>
-      <a href="#">
+      <a href="#Clark" id="Clark">
         <figure>
           <img src="./images/Dog4.jpg" alt="Clark">
           <figcaption>Clark</figcaption>
@@ -75,7 +75,7 @@
           Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
         </p>
       </a>
-      <a href="#">
+      <a href="#Dany" id="Dany">
         <figure>
           <img src="./images/Dog5.jpg" alt="Dany">
           <figcaption>Dany</figcaption>
@@ -85,7 +85,7 @@
           Dany lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Dany was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
         </p>
       </a>
-      <a href="#">
+      <a href="#Dustin" id="Dustin">
         <figure>
           <img src="./images/Dog6.jpg" alt="Dustin">
           <figcaption>Dustin</figcaption>
@@ -95,7 +95,7 @@
           Dustin lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Dustin was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
         </p>
       </a>
-      <a href="#">
+      <a href="#Lord" id="Lord">
         <figure>
           <img src="./images/Dog7.jpg" alt="Lord">
           <figcaption>Lord</figcaption>
@@ -105,7 +105,7 @@
           Lord lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Lord was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
         </p>
       </a>
-      <a href="#">
+      <a href="#Marvin" id="Marvin">
         <figure>
           <img src="./images/Dog8.jpg" alt="Marvin">
           <figcaption>Marvin</figcaption>
@@ -115,7 +115,7 @@
           Marvin lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Marvin was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
         </p>
       </a>
-      <a href="#">
+      <a href="#Rambo" id="Rambo">
         <figure>
           <img src="./images/Dog9.jpg" alt="Rambo">
           <figcaption>Rambo</figcaption>
