Cleaned up in the folders and renamed some things

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- HEADER -->
     <header>
-      <img src="./images/glassure.png">
+      <img src="./images/logo.png">
       <nav>
         <a href="#">News</a>
         <a href="#">Articles</a>
@@ -39,7 +39,7 @@
     </section>
 
 
-    <!-- ARTICLE FLOW -->
+    <!-- ARTICLE FLOW - HORIZONTAL IMAGES -->
     <section class="articles-horizontal">
       
       <div class="article-h">
@@ -71,6 +71,7 @@
       </div>
     </section>
 
+
     <!-- CAROUSEL -->
     <section class="carousel">
       <div class="carousel-item c1">
@@ -100,7 +101,7 @@
     </section>
     
 
-    <!-- MEDIUM NEWS -->
+    <!-- ARTICLE FLOW - VERTICAL IMAGES -->
     <section class="articles-vertical">
       <div class="article-v">
         <img src="./images/pelargon.jpg">
@@ -132,7 +133,7 @@
     </section>
 
     <footer>
-      <img src="images/glassure.png">
+      <img src="images/logo.png">
       <p>A website made by Karin Nordkvist @ Technigo - 1/24</p>
       <p>Copyright 2020 - All images from <a href="http://unsplash.com">Unsplash</a></p>
     </footer>
