Adjusted .big-news for firefox

--- a/code/index.html
+++ b/code/index.html
@@ -40,12 +40,11 @@
       <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
       <div class="big-news-text">
         <h2>Jennies fusion-corner big success</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
+        <p>Jennie's got a long experience in food and we can tell. This new little fusion-corner of the city is the place to be. We sent our Fooder troop to try out her new dishes and they were not dissapointed. Lorem ipsum
+          dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
           taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
           faucibus at tincidunt mollis, ad libero vivamus ante pretium laoreet montes odio vestibulum, mi cubilia augue
-          placerat eros fringilla velit vel. Est et maecenas habitant lobortis aliquet senectus porttitor volutpat
-          convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
-          hendrerit metus elementum.</p>
+          placerat eros fringilla velit vel. </p>
       </div>
     </article>
 
@@ -54,17 +53,14 @@
       <div class="article-card one"><img src="pictures/salmon.jpg" alt="">
         <div class="card-text">
           <h3>Olszewski opens up new restaurant</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
-            montes
-            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+          <p>Maksymilian has done it once again. With his new restaurant he experiments with traditional cooking-methods
+            but with a twist to create dishes beyond our imagination.</p>
         </div>
       </div>
       <div class="article-card two"><img src="pictures/cookingpasta.jpg" alt="">
         <div class="card-text">
           <h3>Crashcourse in pasta</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
-            montes
-            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+          <p>Sick of your dough never holding together? What is the proper ratio in making pasta? Want to try out seasoning your pastadouch? Petra will teach you all the tricks!</p>
         </div>
       </div>
       <div class="article-card three"><img src="pictures/femalechef.jpg" alt="">
@@ -94,25 +90,19 @@
       <div class="article-card six"><img src="pictures/cookingInProgress.jpg" alt="">
         <div class="card-text">
           <h3>Stockholms best Ramen</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
-            montes
-            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+          <p>We've been longing for a hearty Ramen. Thick broth, excellent noodles..The ultimate comfortfood to go to during our darkest months in Stockholm. Vans Ramen is your light at the end of the tunnel.</p>
         </div>
       </div>
       <div class="article-card seven"><img src="pictures/pizza.jpg" alt="">
         <div class="card-text">
           <h3>Papa Poyas Pizza</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
-            montes
-            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+          <p>Another pizzaplace? Well, not exactly. This is not just any pizza. It's <i>the</i> pizza. Combining interesting toppings such as lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes ultricies pulvinar odio, integer penatibus litora class phasellus magnins nam.</p>
         </div>
       </div>
       <div class="article-card eight"><img src="pictures/tacos.jpg" alt="">
         <div class="card-text">
           <h3>Fooders guide to Mexico</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque
-            montes
-            ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+          <p>Pack your bags and get your ticket ready, we're going to Mexico. Fooder will guide you through high-end restaurants and alley foodtrucks to make the most of your trip.</p>
         </div>
       </div>
     </section>
