Changes to padding and margin

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The ultimate guide to Corona</title>
+    <title>Project 2: The ultimate Corona news site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
@@ -18,7 +18,8 @@
     <header>
        <!-- Logo and navbar -->
       <img class= "icon" src ="../assets/icon-corona-black.png" alt="Corona virus">
-      <h1> hashtagCORONA</h1>
+      <h1> #CORONA</h1>
+      <h2> - the corona news site</h2>
       <nav>
         
         <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
