--- a/code/index.html
+++ b/code/index.html
@@ -1,141 +1,153 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>W Magazine - Even Stranger Things</title>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="icon" href="./img/logo.png" type="image/x-icon"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <title>W Magazine - Even Stranger Things</title>
+  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="icon" href="./img/logo.png" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--HEADER-->
-    <header>
-      <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div> 
-      <img class="logo" src="./img/logo.png" alt="Logotype">
-      <div class="site-name">W Magazine</div>
-      <nav>
-        <a href="#">Journal</a>
-        <a href="#">Podcast</a>
-        <a href="#">In Brief</a>
-      </nav>  
-    </header>
+</head>
 
-    <!--BANNER-->
+<body>
 
-    <div class="banner-container">
-      <p>&#128156; SUBSCRIBE</p>
+  <!--HEADER-->
+  <header>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
+    <img class="logo" src="./img/logo.png" alt="Logotype">
+    <div class="site-name">W Magazine</div>
+    <nav>
+      <a href="#">Journal</a>
+      <a href="#">Podcast</a>
+      <a href="#">In Brief</a>
+    </nav>
+  </header>
 
-<!-- THE BIG NEWS -->
+  <!--BANNER-->
 
-  <main>  
+  <div class="banner-container">
+    <p>&#128156; SUBSCRIBE</p>
+  </div>
+
+  <!-- THE BIG NEWS -->
+
+  <main>
     <section class="big-news-container">
-      <img class="top" src="./img/BillyandMrsWheeler.jpg"  alt="Billy and Mrs Wheeler"/>
+      <img class="top" src="./img/BillyandMrsWheeler.jpg" alt="Billy and Mrs Wheeler" />
       <div class="top-text">
         <h3>TOP STORY</h3>
         <h2>Billy and Mrs Wheeler in Court</h2>
-        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetura dipiscing elit, sed doipsum dolor sit amet >>> </p>
+        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetura dipiscing elit, sed doipsum dolor sit
+          amet >>> </p>
       </div>
-      <hr> 
+      <hr>
     </section>
-      
-<!-- THE SMALLER NEWS  -->
+
+    <!-- THE SMALLER NEWS  -->
 
     <section class="small-news-container">
       <div class="cards">
-        <img class="card-1" src="./img/Jazzercise.png" alt="Jazzercise image"/>
+        <img class="card-1" src="./img/Jazzercise.png" alt="Jazzercise image" />
         <div class="card-text">
           <h3>IN BRIEF</h3>
           <h2>Jazzercise - Not For Everyone</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
         </div>
       </div>
-  
+
       <div class="cards">
-        <img class="card-2" src="./img/Eleven.jpg" alt="Eleven"/>
+        <img class="card-2" src="./img/Eleven.jpg" alt="Eleven" />
         <div>
           <h3>PODCAST</h3>
           <h2>Eleven is Back - Tells All</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sit amet, consectetur adipiscing elit sed do
+            eiusmod tempor incididunt ut labore et dolore >>></p>
           <hr>
         </div>
       </div>
 
       <div class="cards">
-        <img class="card-3" src="./img/Truck.jpg" alt="Truck" width=/>
+        <img class="card-3" src="./img/Truck.jpg" alt="Truck" width= />
         <div>
           <h3>IN BRIEF</h3>
           <h2>Hawkins Police Dept in Trouble</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
         </div>
       </div>
 
       <div class="cards">
-        <img class="card-4" src="./img/halloween-party-1.png" alt="Halloween Party" width=/>
+        <img class="card-4" src="./img/halloween-party-1.png" alt="Halloween Party" width= />
         <div>
           <h3>JOURNAL</h3>
           <h2>It's Halloween Folks!</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
         </div>
       </div>
 
       <div class="cards">
-        <img class="card-5" src="./img/Mallinside.png" alt="The Mall"/>
+        <img class="card-5" src="./img/Mallinside.png" alt="The Mall" />
         <div>
           <h3>PODCAST</h3>
           <h2>Finally, Mall is Opened</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
         </div>
       </div>
 
       <div class="cards">
-        <img class="card-6" src="./img/NewCoke.png" alt="New Coke"/>
+        <img class="card-6" src="./img/NewCoke.png" alt="New Coke" />
         <div>
           <h3>JOURNAL</h3>
           <h2>A Coke a Day Keeps the Doctor...</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
-        </div> 
+        </div>
       </div>
 
       <div class="cards">
-        <img class="card-7" src="./img/Startcourt-Mall-1024x580.jpeg" alt="Starcourt Mall"/>
+        <img class="card-7" src="./img/Startcourt-Mall-1024x580.jpeg" alt="Starcourt Mall" />
         <div>
           <h3>IN BRIEF</h3>
           <h2>Pink <i>Is</i> the New Black</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
           <hr>
         </div>
       </div>
 
       <div class="cards">
-        <img class="card-8" src="./img/TheGang2.jpg" alt="The Stranger Things Crew"/>
+        <img class="card-8" src="./img/TheGang2.jpg" alt="The Stranger Things Crew" />
         <div>
           <h3>JOURNAL</h3>
           <h2>Hey - They're Still Alive!</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
-          <hr> 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua >>></p>
+          <hr>
         </div>
       </div>
     </section>
-  </main> 
+  </main>
 
-<!--FOOTER-->
-  
-    <footer>
-      <p>&copy Mrs Wheeler 2020</p>
-      <img class="logo" src="./img/Stranger-Things-Logo-700x394.png" alt="Logotype">
-    </footer> 
-    
-  </body>
+  <!--FOOTER-->
+
+  <footer>
+    <p>&copy Mrs Wheeler 2020</p>
+    <img class="logo" src="./img/Stranger-Things-Logo-700x394.png" alt="Logotype">
+  </footer>
+
+</body>
+
 </html>
