Footer fixed in all views

--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,7 @@
       <div></div>
     </div>
     <img class="header-image" src="./The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
+    <!-- <img class="header-image" src="./The_New_Yorker_logo.png" alt="The New Yorker logo" /> -->
     <nav>
       <a href="#">Books & Culture</a>
       <a href="#">Crossword</a>
@@ -111,5 +112,4 @@
     </p>
   </footer>
 </body>
-
 </html>
