--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yummy food</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+  
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class=logo src="./images/logo.png"> <!-- Some kind of logo and navbar -->
+   
+      <nav>
+        <a class="order-1" href="#">Start</a>
+        <a class="order-2" href="#">Recepies</a>
+        <a class="order-3" href="#">About</a>
+        <a class="order-4" href="#">Contact</a>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news">  <!-- The big news content -->
+      <img src="./images/food_1_1.jpg" alt="breakfast_bowl" style="width:100%">
+       <h3>Yummy food recepies and inspiration</h3>
+       <p>On this site you will find recipes and a lot of inspiration for breakfast, lunch, dinner, snacks and so on.</p>
+       <a href="#">Read more</a>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news"> <!-- The other news  -->
+      
+      <div class="news">
+        <img src="./images/food_2_2.jpg" alt="food2" style="width:100%">
+        <a href="#"><h3>Breakfast</h3></a>
+      </div>
+
+      <div class="news">
+        <img src="./images/food_3_3.jpg" alt="food3" style="width:100%">
+        <a href="#"><h3>Lunch</h3></a>
+       </div>
+
+      <div class="news">
+        <img src="./images/food_4_4.jpg" alt="food4" style="width:100%">
+        <a href="#"><h3>Dinner</h3></a>
+      </div>
+
+      <div class="news">
+        <img src="./images/food_5_5.jpg" alt="food5" style="width:100%">
+        <a href="#"><h4>Snacks</h4></a>
+      </div>
+    
     </section>
   </body>
 </html>
